[package]
name = "imager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.5.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
clap = { version = "4.2.1", features = ["derive"] }
glam = { version = "0.23.0", features = ["bytemuck"] }
log = "0.4.17"
naga = { version = "0.11.0", features = ["glsl-in", "wgsl-out"] }
png = "0.17.7"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
wgpu = { version = "0.15.1", features = ["glsl", "naga"] }
winit = "0.28.3"
x11-dl = "2.21.0"
