[package]
name = "imager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-executor = "1.5.1"
async-std = "1.12.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
byteorder = "1.4.3"
clap = { version = "4.2.1", features = ["derive"] }
glam = { version = "0.23.0", features = ["bytemuck"] }
log = "0.4.17"
naga = { version = "0.11.0", features = ["glsl-in", "wgsl-out"] }
png = "0.17.7"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
wgpu = { version = "0.15.1", features = ["glsl", "naga"] }
winit = "0.28.3"
x11-dl = "2.21.0"
error-chain = "0.12.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.16", features = ["serde_json", "json"] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.68"
image = "0.24.6"

